src/test/deca/context/invalid/sansObjet/print.deca
/* Description:
    Programme minimaliste utilisant print
	syntax valid, context invalide

 Resultats:
    Hello

 Historique:
    cree le 01/01/2020
*/

{

        print("Hello");
	println(true);
	println(false);
	print(false);
	print(true);
	print(null);
	println(null);
	print();
	println();


}
